<resources>
    <string name="app_name">Movie</string>
    <string name="movie_name">Movie Name : </string>
    <string name="movie_review">Movie Review : </string>
    <string name="todo">TODO</string>
    <string name="movie_details">Movie Details</string>
    <string name="the_most_popular_movies">The Most Popular Movies</string>
    <string name="average_vote">Vote Average :</string>
    <string name="release_date">Release Date :</string>
</resources>